// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`<NumberInput /> > should have some hintText 1`] = `
<div
  class="theme_OD_Base__j49br80"
  data-od-component-provider=""
>
  <div
    class="reset_block__1oah0224 sprinkles_width_full_mobile__onxwjudd"
  >
    <div
      class="reset_block__1oah0224 sprinkles_paddingBottom_none_mobile__onxwjupt sprinkles_paddingLeft_none_mobile__onxwjuqx sprinkles_paddingRight_none_mobile__onxwjus1 sprinkles_paddingTop_none_mobile__onxwjut5 sprinkles_position_relative_mobile__onxwju9p sprinkles_width_full_mobile__onxwjudd NotchedBase_root__1ft8sxl0"
    >
      <div
        class="reset_block__1oah0224 sprinkles_width_full_mobile__onxwjudd sprinkles_height_full_mobile__onxwjubt"
      >
        <input
          autocomplete="off"
          class="reset_trimmedBlockElement__1oah0226 reset_appearance__1oah0221 reset_input__1oah0229 reset_trimmedBlockElement__1oah0226 reset_appearance__1oah0221 reset_input__1oah0229 sprinkles_borderRadius_md__onxwju4 sprinkles_width_full_mobile__onxwjudd sprinkles_position_relative_mobile__onxwju9p sprinkles_display_flex_mobile__onxwju81 sprinkles_backgroundColor_transparent__onxwju5h withEnhancedInput_input_itself_root__5jmdy80 withEnhancedInput_inputItselfSize_medium_root_any__5jmdy8b"
          id="id"
          max="2147483647"
          type="number"
          value=""
        />
      </div>
      <div
        class="reset_block__1oah0224 sprinkles_pointerEvents_none__onxwju3i sprinkles_position_absolute_mobile__onxwju9t sprinkles_display_flex_mobile__onxwju81 sprinkles_width_full_mobile__onxwjudd sprinkles_height_full_mobile__onxwjubt sprinkles_textAlign_left_mobile__onxwjua5 NotchedBase_borderVisualDefaults__1ft8sxl6 NotchedBase_borders_root_default__1ft8sxlb"
      >
        <div
          class="NotchedBase_borderRegionDefaults__1ft8sxl5 NotchedBase_borders_leading__1ft8sxlc InputState_natural_default_borderColour__a2a1mv5"
        />
        <div
          class="NotchedBase_borderRegionDefaults__1ft8sxl5 NotchedBase_borders_middle__1ft8sxld InputState_natural_default_borderColour__a2a1mv5"
        >
          <div
            class="reset_block__1oah0224 sprinkles_paddingLeft_2_mobile__onxwjuq1 sprinkles_paddingRight_2_mobile__onxwjur5 sprinkles_display_none_mobile__onxwju7p NotchedBase_labelStyle_base__1ft8sxl1 NotchedBase_labelStyle_medium__1ft8sxl3 NotchedBase_notchGapPlaceholder_base__1ft8sxl7 NotchedBase_notchGapPlaceholder_medium__1ft8sxl9"
          >
            placeholder
          </div>
          <label
            class="reset_inlineText__1oah0223 sprinkles_pointerEvents_none__onxwju3i sprinkles_paddingBottom_none_mobile__onxwjupt sprinkles_paddingLeft_none_mobile__onxwjuqx sprinkles_paddingRight_none_mobile__onxwjus1 sprinkles_paddingTop_none_mobile__onxwjut5 sprinkles_marginBottom_none_mobile__onxwjuu9 sprinkles_marginLeft_none_mobile__onxwjuvd sprinkles_marginRight_none_mobile__onxwjuwl sprinkles_marginTop_none_mobile__onxwjuxt sprinkles_position_absolute_mobile__onxwju9t sprinkles_display_inline_mobile__onxwju89 NotchedBase_placeholder_default__1ft8sxlz NotchedBase_labelStyle_base__1ft8sxl1 NotchedBase_labelStyle_medium__1ft8sxl3 NotchedBase_placeholder_mutedLabelStyles__1ft8sxl10 NotchedBase_placeholderPlacement_medium_default__1ft8sxl15"
            for="id"
          >
            placeholder
          </label>
        </div>
        <div
          class="NotchedBase_borderRegionDefaults__1ft8sxl5 NotchedBase_borders_trailing__1ft8sxle InputState_natural_default_borderColour__a2a1mv5"
        />
      </div>
    </div>
    <p
      class="reset_blockText__1oah022d useTextStyles_root__1xnpmd70 reset_blockText__1oah022d useTextStyles_fontWeight_normal__1xnpmd7p useTextStyles_sizes_2__1xnpmd72 reset_blockText__1oah022d sprinkles_marginTop_1_mobile__onxwjuwt HintText_hintText__down5s0 InputState_natural_default_colour__a2a1mv4"
    >
      hint text
    </p>
  </div>
</div>
`;

exports[`<NumberInput /> > should match snapshot 1`] = `
<div
  class="theme_OD_Base__j49br80"
  data-od-component-provider=""
>
  <div
    class="reset_block__1oah0224 sprinkles_width_full_mobile__onxwjudd"
  >
    <div
      class="reset_block__1oah0224 sprinkles_paddingBottom_none_mobile__onxwjupt sprinkles_paddingLeft_none_mobile__onxwjuqx sprinkles_paddingRight_none_mobile__onxwjus1 sprinkles_paddingTop_none_mobile__onxwjut5 sprinkles_position_relative_mobile__onxwju9p sprinkles_width_full_mobile__onxwjudd NotchedBase_root__1ft8sxl0"
    >
      <div
        class="reset_block__1oah0224 sprinkles_width_full_mobile__onxwjudd sprinkles_height_full_mobile__onxwjubt"
      >
        <input
          autocomplete="off"
          class="reset_trimmedBlockElement__1oah0226 reset_appearance__1oah0221 reset_input__1oah0229 reset_trimmedBlockElement__1oah0226 reset_appearance__1oah0221 reset_input__1oah0229 sprinkles_borderRadius_md__onxwju4 sprinkles_width_full_mobile__onxwjudd sprinkles_position_relative_mobile__onxwju9p sprinkles_display_flex_mobile__onxwju81 sprinkles_backgroundColor_transparent__onxwju5h withEnhancedInput_input_itself_root__5jmdy80 withEnhancedInput_inputItselfSize_medium_root_any__5jmdy8b"
          id="id"
          max="2147483647"
          type="number"
          value=""
        />
      </div>
      <div
        class="reset_block__1oah0224 sprinkles_pointerEvents_none__onxwju3i sprinkles_position_absolute_mobile__onxwju9t sprinkles_display_flex_mobile__onxwju81 sprinkles_width_full_mobile__onxwjudd sprinkles_height_full_mobile__onxwjubt sprinkles_textAlign_left_mobile__onxwjua5 NotchedBase_borderVisualDefaults__1ft8sxl6 NotchedBase_borders_root_default__1ft8sxlb"
      >
        <div
          class="NotchedBase_borderRegionDefaults__1ft8sxl5 NotchedBase_borders_leading__1ft8sxlc InputState_natural_default_borderColour__a2a1mv5"
        />
        <div
          class="NotchedBase_borderRegionDefaults__1ft8sxl5 NotchedBase_borders_middle__1ft8sxld InputState_natural_default_borderColour__a2a1mv5"
        >
          <div
            class="reset_block__1oah0224 sprinkles_paddingLeft_2_mobile__onxwjuq1 sprinkles_paddingRight_2_mobile__onxwjur5 sprinkles_display_none_mobile__onxwju7p NotchedBase_labelStyle_base__1ft8sxl1 NotchedBase_labelStyle_medium__1ft8sxl3 NotchedBase_notchGapPlaceholder_base__1ft8sxl7 NotchedBase_notchGapPlaceholder_medium__1ft8sxl9"
          >
            placeholder something
          </div>
          <label
            class="reset_inlineText__1oah0223 sprinkles_pointerEvents_none__onxwju3i sprinkles_paddingBottom_none_mobile__onxwjupt sprinkles_paddingLeft_none_mobile__onxwjuqx sprinkles_paddingRight_none_mobile__onxwjus1 sprinkles_paddingTop_none_mobile__onxwjut5 sprinkles_marginBottom_none_mobile__onxwjuu9 sprinkles_marginLeft_none_mobile__onxwjuvd sprinkles_marginRight_none_mobile__onxwjuwl sprinkles_marginTop_none_mobile__onxwjuxt sprinkles_position_absolute_mobile__onxwju9t sprinkles_display_inline_mobile__onxwju89 NotchedBase_placeholder_default__1ft8sxlz NotchedBase_labelStyle_base__1ft8sxl1 NotchedBase_labelStyle_medium__1ft8sxl3 NotchedBase_placeholder_mutedLabelStyles__1ft8sxl10 NotchedBase_placeholderPlacement_medium_default__1ft8sxl15"
            for="id"
          >
            placeholder something
          </label>
        </div>
        <div
          class="NotchedBase_borderRegionDefaults__1ft8sxl5 NotchedBase_borders_trailing__1ft8sxle InputState_natural_default_borderColour__a2a1mv5"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`<NumberInput /> > should match snapshot when active 1`] = `
<div
  class="theme_OD_Base__j49br80"
  data-od-component-provider=""
>
  <div
    class="reset_block__1oah0224 sprinkles_width_full_mobile__onxwjudd input-class"
  >
    <div
      class="reset_block__1oah0224 sprinkles_paddingBottom_none_mobile__onxwjupt sprinkles_paddingLeft_none_mobile__onxwjuqx sprinkles_paddingRight_none_mobile__onxwjus1 sprinkles_paddingTop_none_mobile__onxwjut5 sprinkles_position_relative_mobile__onxwju9p sprinkles_width_full_mobile__onxwjudd NotchedBase_root__1ft8sxl0"
    >
      <div
        class="reset_block__1oah0224 sprinkles_width_full_mobile__onxwjudd sprinkles_height_full_mobile__onxwjubt"
      >
        <input
          autocomplete="off"
          class="reset_trimmedBlockElement__1oah0226 reset_appearance__1oah0221 reset_input__1oah0229 reset_trimmedBlockElement__1oah0226 reset_appearance__1oah0221 reset_input__1oah0229 sprinkles_borderRadius_md__onxwju4 sprinkles_width_full_mobile__onxwjudd sprinkles_position_relative_mobile__onxwju9p sprinkles_display_flex_mobile__onxwju81 sprinkles_backgroundColor_transparent__onxwju5h withEnhancedInput_input_itself_root__5jmdy80 withEnhancedInput_inputItselfSize_medium_root_any__5jmdy8b"
          max="2147483647"
          type="number"
          value=""
        />
      </div>
      <div
        class="reset_block__1oah0224 sprinkles_pointerEvents_none__onxwju3i sprinkles_position_absolute_mobile__onxwju9t sprinkles_display_flex_mobile__onxwju81 sprinkles_width_full_mobile__onxwjudd sprinkles_height_full_mobile__onxwjubt sprinkles_textAlign_left_mobile__onxwjua5 NotchedBase_borderVisualDefaults__1ft8sxl6 NotchedBase_borders_root_default__1ft8sxlb"
      >
        <div
          class="NotchedBase_borderRegionDefaults__1ft8sxl5 NotchedBase_borders_leading__1ft8sxlc InputState_activeBorderColour__a2a1mv1"
        />
        <div
          class="NotchedBase_borderRegionDefaults__1ft8sxl5 NotchedBase_borders_middle__1ft8sxld InputState_activeBorderColour__a2a1mv1"
        >
          <div
            class="reset_block__1oah0224 sprinkles_paddingLeft_2_mobile__onxwjuq1 sprinkles_paddingRight_2_mobile__onxwjur5 sprinkles_display_none_mobile__onxwju7p NotchedBase_labelStyle_base__1ft8sxl1 NotchedBase_labelStyle_medium__1ft8sxl3 NotchedBase_notchGapPlaceholder_base__1ft8sxl7 NotchedBase_notchGapPlaceholder_medium__1ft8sxl9"
          >
            placeholder something
          </div>
          <label
            class="reset_inlineText__1oah0223 sprinkles_pointerEvents_none__onxwju3i sprinkles_paddingBottom_none_mobile__onxwjupt sprinkles_paddingLeft_none_mobile__onxwjuqx sprinkles_paddingRight_none_mobile__onxwjus1 sprinkles_paddingTop_none_mobile__onxwjut5 sprinkles_marginBottom_none_mobile__onxwjuu9 sprinkles_marginLeft_none_mobile__onxwjuvd sprinkles_marginRight_none_mobile__onxwjuwl sprinkles_marginTop_none_mobile__onxwjuxt sprinkles_position_absolute_mobile__onxwju9t sprinkles_display_inline_mobile__onxwju89 NotchedBase_placeholder_default__1ft8sxlz NotchedBase_labelStyle_base__1ft8sxl1 NotchedBase_labelStyle_medium__1ft8sxl3 NotchedBase_placeholder_mutedLabelStyles__1ft8sxl10 NotchedBase_placeholderPlacement_medium_default__1ft8sxl15"
          >
            placeholder something
          </label>
        </div>
        <div
          class="NotchedBase_borderRegionDefaults__1ft8sxl5 NotchedBase_borders_trailing__1ft8sxle InputState_activeBorderColour__a2a1mv1"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`<NumberInput /> > should match snapshot when loading 1`] = `
<div
  class="theme_OD_Base__j49br80"
  data-od-component-provider=""
>
  <div
    class="reset_block__1oah0224 sprinkles_width_full_mobile__onxwjudd"
  >
    <div
      class="reset_block__1oah0224 sprinkles_paddingBottom_none_mobile__onxwjupt sprinkles_paddingLeft_none_mobile__onxwjuqx sprinkles_paddingRight_none_mobile__onxwjus1 sprinkles_paddingTop_none_mobile__onxwjut5 sprinkles_position_relative_mobile__onxwju9p sprinkles_width_full_mobile__onxwjudd NotchedBase_root__1ft8sxl0"
    >
      <div
        class="reset_block__1oah0224 sprinkles_width_full_mobile__onxwjudd sprinkles_height_full_mobile__onxwjubt"
      >
        <input
          autocomplete="off"
          class="reset_trimmedBlockElement__1oah0226 reset_appearance__1oah0221 reset_input__1oah0229 reset_trimmedBlockElement__1oah0226 reset_appearance__1oah0221 reset_input__1oah0229 sprinkles_borderRadius_md__onxwju4 sprinkles_width_full_mobile__onxwjudd sprinkles_position_relative_mobile__onxwju9p sprinkles_display_flex_mobile__onxwju81 sprinkles_backgroundColor_transparent__onxwju5h withEnhancedInput_input_itself_root__5jmdy80 withEnhancedInput_inputItselfSize_medium_root_any__5jmdy8b"
          id="id"
          max="2147483647"
          type="number"
          value=""
        />
      </div>
      <div
        class="reset_block__1oah0224 sprinkles_pointerEvents_none__onxwju3i sprinkles_position_absolute_mobile__onxwju9t sprinkles_display_flex_mobile__onxwju81 sprinkles_width_full_mobile__onxwjudd sprinkles_height_full_mobile__onxwjubt sprinkles_textAlign_left_mobile__onxwjua5 NotchedBase_borderVisualDefaults__1ft8sxl6 NotchedBase_borders_root_default__1ft8sxlb"
      >
        <div
          class="NotchedBase_borderRegionDefaults__1ft8sxl5 NotchedBase_borders_leading__1ft8sxlc InputState_natural_default_borderColour__a2a1mv5"
        />
        <div
          class="NotchedBase_borderRegionDefaults__1ft8sxl5 NotchedBase_borders_middle__1ft8sxld InputState_natural_default_borderColour__a2a1mv5"
        >
          <div
            class="reset_block__1oah0224 sprinkles_paddingLeft_2_mobile__onxwjuq1 sprinkles_paddingRight_2_mobile__onxwjur5 sprinkles_display_none_mobile__onxwju7p NotchedBase_labelStyle_base__1ft8sxl1 NotchedBase_labelStyle_medium__1ft8sxl3 NotchedBase_notchGapPlaceholder_base__1ft8sxl7 NotchedBase_notchGapPlaceholder_medium__1ft8sxl9"
          >
            placeholder something
          </div>
          <label
            class="reset_inlineText__1oah0223 sprinkles_pointerEvents_none__onxwju3i sprinkles_paddingBottom_none_mobile__onxwjupt sprinkles_paddingLeft_none_mobile__onxwjuqx sprinkles_paddingRight_none_mobile__onxwjus1 sprinkles_paddingTop_none_mobile__onxwjut5 sprinkles_marginBottom_none_mobile__onxwjuu9 sprinkles_marginLeft_none_mobile__onxwjuvd sprinkles_marginRight_none_mobile__onxwjuwl sprinkles_marginTop_none_mobile__onxwjuxt sprinkles_position_absolute_mobile__onxwju9t sprinkles_display_inline_mobile__onxwju89 NotchedBase_placeholder_default__1ft8sxlz NotchedBase_labelStyle_base__1ft8sxl1 NotchedBase_labelStyle_medium__1ft8sxl3 NotchedBase_placeholder_mutedLabelStyles__1ft8sxl10 NotchedBase_placeholderPlacement_medium_default__1ft8sxl15"
            for="id"
          >
            placeholder something
          </label>
        </div>
        <div
          class="NotchedBase_borderRegionDefaults__1ft8sxl5 NotchedBase_borders_trailing__1ft8sxle InputState_natural_default_borderColour__a2a1mv5"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`<NumberInput /> > should match snapshot when touched 1`] = `
<div
  class="theme_OD_Base__j49br80"
  data-od-component-provider=""
>
  <div
    class="reset_block__1oah0224 sprinkles_width_full_mobile__onxwjudd input-class"
  >
    <div
      class="reset_block__1oah0224 sprinkles_paddingBottom_none_mobile__onxwjupt sprinkles_paddingLeft_none_mobile__onxwjuqx sprinkles_paddingRight_none_mobile__onxwjus1 sprinkles_paddingTop_none_mobile__onxwjut5 sprinkles_position_relative_mobile__onxwju9p sprinkles_width_full_mobile__onxwjudd NotchedBase_root__1ft8sxl0"
    >
      <div
        class="reset_block__1oah0224 sprinkles_width_full_mobile__onxwjudd sprinkles_height_full_mobile__onxwjubt"
      >
        <input
          autocomplete="off"
          class="reset_trimmedBlockElement__1oah0226 reset_appearance__1oah0221 reset_input__1oah0229 reset_trimmedBlockElement__1oah0226 reset_appearance__1oah0221 reset_input__1oah0229 sprinkles_borderRadius_md__onxwju4 sprinkles_width_full_mobile__onxwjudd sprinkles_position_relative_mobile__onxwju9p sprinkles_display_flex_mobile__onxwju81 sprinkles_backgroundColor_transparent__onxwju5h withEnhancedInput_input_itself_root__5jmdy80 withEnhancedInput_inputItselfSize_medium_root_any__5jmdy8b"
          max="2147483647"
          type="number"
          value=""
        />
      </div>
      <div
        class="reset_block__1oah0224 sprinkles_pointerEvents_none__onxwju3i sprinkles_position_absolute_mobile__onxwju9t sprinkles_display_flex_mobile__onxwju81 sprinkles_width_full_mobile__onxwjudd sprinkles_height_full_mobile__onxwjubt sprinkles_textAlign_left_mobile__onxwjua5 NotchedBase_borderVisualDefaults__1ft8sxl6 NotchedBase_borders_root_default__1ft8sxlb"
      >
        <div
          class="NotchedBase_borderRegionDefaults__1ft8sxl5 NotchedBase_borders_leading__1ft8sxlc InputState_error_default_borderColour__a2a1mvd"
        />
        <div
          class="NotchedBase_borderRegionDefaults__1ft8sxl5 NotchedBase_borders_middle__1ft8sxld InputState_error_default_borderColour__a2a1mvd"
        >
          <div
            class="reset_block__1oah0224 sprinkles_paddingLeft_2_mobile__onxwjuq1 sprinkles_paddingRight_2_mobile__onxwjur5 sprinkles_display_none_mobile__onxwju7p NotchedBase_labelStyle_base__1ft8sxl1 NotchedBase_labelStyle_medium__1ft8sxl3 NotchedBase_notchGapPlaceholder_base__1ft8sxl7 NotchedBase_notchGapPlaceholder_medium__1ft8sxl9"
          >
            placeholder something
          </div>
          <label
            class="reset_inlineText__1oah0223 sprinkles_pointerEvents_none__onxwju3i sprinkles_paddingBottom_none_mobile__onxwjupt sprinkles_paddingLeft_none_mobile__onxwjuqx sprinkles_paddingRight_none_mobile__onxwjus1 sprinkles_paddingTop_none_mobile__onxwjut5 sprinkles_marginBottom_none_mobile__onxwjuu9 sprinkles_marginLeft_none_mobile__onxwjuvd sprinkles_marginRight_none_mobile__onxwjuwl sprinkles_marginTop_none_mobile__onxwjuxt sprinkles_position_absolute_mobile__onxwju9t sprinkles_display_inline_mobile__onxwju89 NotchedBase_placeholder_default__1ft8sxlz NotchedBase_labelStyle_base__1ft8sxl1 NotchedBase_labelStyle_medium__1ft8sxl3 NotchedBase_placeholder_mutedLabelStyles__1ft8sxl10 NotchedBase_placeholderPlacement_medium_default__1ft8sxl15"
          >
            placeholder something
          </label>
        </div>
        <div
          class="NotchedBase_borderRegionDefaults__1ft8sxl5 NotchedBase_borders_trailing__1ft8sxle InputState_error_default_borderColour__a2a1mvd"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`<NumberInput /> > should match snapshot when touched and invalid 1`] = `
<div
  class="theme_OD_Base__j49br80"
  data-od-component-provider=""
>
  <div
    class="reset_block__1oah0224 sprinkles_width_full_mobile__onxwjudd input-class"
  >
    <div
      class="reset_block__1oah0224 sprinkles_paddingBottom_none_mobile__onxwjupt sprinkles_paddingLeft_none_mobile__onxwjuqx sprinkles_paddingRight_none_mobile__onxwjus1 sprinkles_paddingTop_none_mobile__onxwjut5 sprinkles_position_relative_mobile__onxwju9p sprinkles_width_full_mobile__onxwjudd NotchedBase_root__1ft8sxl0"
    >
      <div
        class="reset_block__1oah0224 sprinkles_width_full_mobile__onxwjudd sprinkles_height_full_mobile__onxwjubt"
      >
        <input
          autocomplete="off"
          class="reset_trimmedBlockElement__1oah0226 reset_appearance__1oah0221 reset_input__1oah0229 reset_trimmedBlockElement__1oah0226 reset_appearance__1oah0221 reset_input__1oah0229 sprinkles_borderRadius_md__onxwju4 sprinkles_width_full_mobile__onxwjudd sprinkles_position_relative_mobile__onxwju9p sprinkles_display_flex_mobile__onxwju81 sprinkles_backgroundColor_transparent__onxwju5h withEnhancedInput_input_itself_root__5jmdy80 withEnhancedInput_inputItselfSize_medium_root_any__5jmdy8b"
          max="2147483647"
          type="number"
          value=""
        />
      </div>
      <div
        class="reset_block__1oah0224 sprinkles_pointerEvents_none__onxwju3i sprinkles_position_absolute_mobile__onxwju9t sprinkles_display_flex_mobile__onxwju81 sprinkles_width_full_mobile__onxwjudd sprinkles_height_full_mobile__onxwjubt sprinkles_textAlign_left_mobile__onxwjua5 NotchedBase_borderVisualDefaults__1ft8sxl6 NotchedBase_borders_root_default__1ft8sxlb"
      >
        <div
          class="NotchedBase_borderRegionDefaults__1ft8sxl5 NotchedBase_borders_leading__1ft8sxlc InputState_error_default_borderColour__a2a1mvd"
        />
        <div
          class="NotchedBase_borderRegionDefaults__1ft8sxl5 NotchedBase_borders_middle__1ft8sxld InputState_error_default_borderColour__a2a1mvd"
        >
          <div
            class="reset_block__1oah0224 sprinkles_paddingLeft_2_mobile__onxwjuq1 sprinkles_paddingRight_2_mobile__onxwjur5 sprinkles_display_none_mobile__onxwju7p NotchedBase_labelStyle_base__1ft8sxl1 NotchedBase_labelStyle_medium__1ft8sxl3 NotchedBase_notchGapPlaceholder_base__1ft8sxl7 NotchedBase_notchGapPlaceholder_medium__1ft8sxl9"
          >
            placeholder something
          </div>
          <label
            class="reset_inlineText__1oah0223 sprinkles_pointerEvents_none__onxwju3i sprinkles_paddingBottom_none_mobile__onxwjupt sprinkles_paddingLeft_none_mobile__onxwjuqx sprinkles_paddingRight_none_mobile__onxwjus1 sprinkles_paddingTop_none_mobile__onxwjut5 sprinkles_marginBottom_none_mobile__onxwjuu9 sprinkles_marginLeft_none_mobile__onxwjuvd sprinkles_marginRight_none_mobile__onxwjuwl sprinkles_marginTop_none_mobile__onxwjuxt sprinkles_position_absolute_mobile__onxwju9t sprinkles_display_inline_mobile__onxwju89 NotchedBase_placeholder_default__1ft8sxlz NotchedBase_labelStyle_base__1ft8sxl1 NotchedBase_labelStyle_medium__1ft8sxl3 NotchedBase_placeholder_mutedLabelStyles__1ft8sxl10 NotchedBase_placeholderPlacement_medium_default__1ft8sxl15"
          >
            placeholder something
          </label>
        </div>
        <div
          class="NotchedBase_borderRegionDefaults__1ft8sxl5 NotchedBase_borders_trailing__1ft8sxle InputState_error_default_borderColour__a2a1mvd"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`<NumberInput /> > should match snapshot when touched and valid 1`] = `
<div
  class="theme_OD_Base__j49br80"
  data-od-component-provider=""
>
  <div
    class="reset_block__1oah0224 sprinkles_width_full_mobile__onxwjudd input-class"
  >
    <div
      class="reset_block__1oah0224 sprinkles_paddingBottom_none_mobile__onxwjupt sprinkles_paddingLeft_none_mobile__onxwjuqx sprinkles_paddingRight_none_mobile__onxwjus1 sprinkles_paddingTop_none_mobile__onxwjut5 sprinkles_position_relative_mobile__onxwju9p sprinkles_width_full_mobile__onxwjudd NotchedBase_root__1ft8sxl0"
    >
      <div
        class="reset_block__1oah0224 sprinkles_width_full_mobile__onxwjudd sprinkles_height_full_mobile__onxwjubt"
      >
        <input
          autocomplete="off"
          class="reset_trimmedBlockElement__1oah0226 reset_appearance__1oah0221 reset_input__1oah0229 reset_trimmedBlockElement__1oah0226 reset_appearance__1oah0221 reset_input__1oah0229 sprinkles_borderRadius_md__onxwju4 sprinkles_width_full_mobile__onxwjudd sprinkles_position_relative_mobile__onxwju9p sprinkles_display_flex_mobile__onxwju81 sprinkles_backgroundColor_transparent__onxwju5h withEnhancedInput_input_itself_root__5jmdy80 withEnhancedInput_inputItselfSize_medium_root_any__5jmdy8b"
          max="2147483647"
          type="number"
          value=""
        />
      </div>
      <div
        class="reset_block__1oah0224 sprinkles_pointerEvents_none__onxwju3i sprinkles_position_absolute_mobile__onxwju9t sprinkles_display_flex_mobile__onxwju81 sprinkles_width_full_mobile__onxwjudd sprinkles_height_full_mobile__onxwjubt sprinkles_textAlign_left_mobile__onxwjua5 NotchedBase_borderVisualDefaults__1ft8sxl6 NotchedBase_borders_root_default__1ft8sxlb"
      >
        <div
          class="NotchedBase_borderRegionDefaults__1ft8sxl5 NotchedBase_borders_leading__1ft8sxlc InputState_success_default_borderColour__a2a1mv7"
        />
        <div
          class="NotchedBase_borderRegionDefaults__1ft8sxl5 NotchedBase_borders_middle__1ft8sxld InputState_success_default_borderColour__a2a1mv7"
        >
          <div
            class="reset_block__1oah0224 sprinkles_paddingLeft_2_mobile__onxwjuq1 sprinkles_paddingRight_2_mobile__onxwjur5 sprinkles_display_none_mobile__onxwju7p NotchedBase_labelStyle_base__1ft8sxl1 NotchedBase_labelStyle_medium__1ft8sxl3 NotchedBase_notchGapPlaceholder_base__1ft8sxl7 NotchedBase_notchGapPlaceholder_medium__1ft8sxl9"
          >
            placeholder something
          </div>
          <label
            class="reset_inlineText__1oah0223 sprinkles_pointerEvents_none__onxwju3i sprinkles_paddingBottom_none_mobile__onxwjupt sprinkles_paddingLeft_none_mobile__onxwjuqx sprinkles_paddingRight_none_mobile__onxwjus1 sprinkles_paddingTop_none_mobile__onxwjut5 sprinkles_marginBottom_none_mobile__onxwjuu9 sprinkles_marginLeft_none_mobile__onxwjuvd sprinkles_marginRight_none_mobile__onxwjuwl sprinkles_marginTop_none_mobile__onxwjuxt sprinkles_position_absolute_mobile__onxwju9t sprinkles_display_inline_mobile__onxwju89 NotchedBase_placeholder_default__1ft8sxlz NotchedBase_labelStyle_base__1ft8sxl1 NotchedBase_labelStyle_medium__1ft8sxl3 NotchedBase_placeholder_mutedLabelStyles__1ft8sxl10 NotchedBase_placeholderPlacement_medium_default__1ft8sxl15"
          >
            placeholder something
          </label>
        </div>
        <div
          class="NotchedBase_borderRegionDefaults__1ft8sxl5 NotchedBase_borders_trailing__1ft8sxle InputState_success_default_borderColour__a2a1mv7"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`<NumberInput /> > should match snapshot with both icons 1`] = `
<div
  class="theme_OD_Base__j49br80"
  data-od-component-provider=""
>
  <div
    class="reset_block__1oah0224 sprinkles_width_full_mobile__onxwjudd input-class"
  >
    <div
      class="reset_block__1oah0224 sprinkles_paddingBottom_none_mobile__onxwjupt sprinkles_paddingLeft_none_mobile__onxwjuqx sprinkles_paddingRight_none_mobile__onxwjus1 sprinkles_paddingTop_none_mobile__onxwjut5 sprinkles_position_relative_mobile__onxwju9p sprinkles_width_full_mobile__onxwjudd NotchedBase_root__1ft8sxl0"
    >
      <div
        class="reset_block__1oah0224 sprinkles_width_full_mobile__onxwjudd sprinkles_height_full_mobile__onxwjubt"
      >
        <span
          class="reset_inlineText__1oah0223 sprinkles_display_block_mobile__onxwju7t Icon_makeResponsiveStyle_key_bp__1gy3ire4 reset_block__1oah0224 sprinkles_pointerEvents_none__onxwju3i sprinkles_position_absolute_mobile__onxwju9t withEnhancedInput_iconRoot__5jmdy8j withEnhancedInput_prefixIcon__5jmdy8k withEnhancedInput_iconSize_medium__5jmdy8n InputState_natural_default_colour__a2a1mv4"
        >
          <svg
            aria-hidden="true"
            class="sprinkles_display_block_mobile__onxwju7t sprinkles_width_full_mobile__onxwjudd sprinkles_height_full_mobile__onxwjubt"
            viewBox="0 0 512 512"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M183.253 353.707L280.96 256l-97.707-97.92 30.08-30.08 128 128-128 128-30.08-30.293z"
            />
          </svg>
        </span>
        <span
          class="reset_inlineText__1oah0223 sprinkles_display_block_mobile__onxwju7t Icon_makeResponsiveStyle_key_bp__1gy3ire4 reset_block__1oah0224 sprinkles_pointerEvents_none__onxwju3i sprinkles_position_absolute_mobile__onxwju9t withEnhancedInput_iconRoot__5jmdy8j withEnhancedInput_suffixIcon__5jmdy8l withEnhancedInput_iconSize_medium__5jmdy8n InputState_natural_default_colour__a2a1mv4"
        >
          <svg
            aria-hidden="true"
            class="sprinkles_display_block_mobile__onxwju7t sprinkles_width_full_mobile__onxwjudd sprinkles_height_full_mobile__onxwjubt"
            viewBox="0 0 512 512"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M183.253 353.707L280.96 256l-97.707-97.92 30.08-30.08 128 128-128 128-30.08-30.293z"
            />
          </svg>
        </span>
        <input
          autocomplete="off"
          class="reset_trimmedBlockElement__1oah0226 reset_appearance__1oah0221 reset_input__1oah0229 reset_trimmedBlockElement__1oah0226 reset_appearance__1oah0221 reset_input__1oah0229 sprinkles_borderRadius_md__onxwju4 sprinkles_width_full_mobile__onxwjudd sprinkles_position_relative_mobile__onxwju9p sprinkles_display_flex_mobile__onxwju81 sprinkles_backgroundColor_transparent__onxwju5h withEnhancedInput_input_itself_root__5jmdy80 withEnhancedInput_inputItselfSize_medium_root_any__5jmdy8b withEnhancedInput_inputItselfSize_medium_prefixed_any__5jmdy8d undefined withEnhancedInput_inputItselfSize_medium_suffixed_any__5jmdy8e"
          max="2147483647"
          type="number"
          value=""
        />
      </div>
      <div
        class="reset_block__1oah0224 sprinkles_pointerEvents_none__onxwju3i sprinkles_position_absolute_mobile__onxwju9t sprinkles_display_flex_mobile__onxwju81 sprinkles_width_full_mobile__onxwjudd sprinkles_height_full_mobile__onxwjubt sprinkles_textAlign_left_mobile__onxwjua5 NotchedBase_borderVisualDefaults__1ft8sxl6 NotchedBase_borders_root_default__1ft8sxlb"
      >
        <div
          class="NotchedBase_borderRegionDefaults__1ft8sxl5 NotchedBase_borders_leading__1ft8sxlc InputState_natural_default_borderColour__a2a1mv5"
        />
        <div
          class="NotchedBase_borderRegionDefaults__1ft8sxl5 NotchedBase_borders_middle__1ft8sxld InputState_natural_default_borderColour__a2a1mv5"
        >
          <div
            class="reset_block__1oah0224 sprinkles_paddingLeft_2_mobile__onxwjuq1 sprinkles_paddingRight_2_mobile__onxwjur5 sprinkles_display_none_mobile__onxwju7p NotchedBase_labelStyle_base__1ft8sxl1 NotchedBase_labelStyle_medium__1ft8sxl3 NotchedBase_notchGapPlaceholder_base__1ft8sxl7 NotchedBase_notchGapPlaceholder_medium__1ft8sxl9"
          >
            placeholder something
          </div>
          <label
            class="reset_inlineText__1oah0223 sprinkles_pointerEvents_none__onxwju3i sprinkles_paddingBottom_none_mobile__onxwjupt sprinkles_paddingLeft_none_mobile__onxwjuqx sprinkles_paddingRight_none_mobile__onxwjus1 sprinkles_paddingTop_none_mobile__onxwjut5 sprinkles_marginBottom_none_mobile__onxwjuu9 sprinkles_marginLeft_none_mobile__onxwjuvd sprinkles_marginRight_none_mobile__onxwjuwl sprinkles_marginTop_none_mobile__onxwjuxt sprinkles_position_absolute_mobile__onxwju9t sprinkles_display_inline_mobile__onxwju89 NotchedBase_placeholder_default__1ft8sxlz NotchedBase_labelStyle_base__1ft8sxl1 NotchedBase_labelStyle_medium__1ft8sxl3 NotchedBase_placeholder_mutedLabelStyles__1ft8sxl10 NotchedBase_placeholderPlacement_medium_defaultPrefixed__1ft8sxl16"
          >
            placeholder something
          </label>
        </div>
        <div
          class="NotchedBase_borderRegionDefaults__1ft8sxl5 NotchedBase_borders_trailing__1ft8sxle InputState_natural_default_borderColour__a2a1mv5"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`<NumberInput /> > should match snapshot with prefix icon 1`] = `
<div
  class="theme_OD_Base__j49br80"
  data-od-component-provider=""
>
  <div
    class="reset_block__1oah0224 sprinkles_width_full_mobile__onxwjudd input-class"
  >
    <div
      class="reset_block__1oah0224 sprinkles_paddingBottom_none_mobile__onxwjupt sprinkles_paddingLeft_none_mobile__onxwjuqx sprinkles_paddingRight_none_mobile__onxwjus1 sprinkles_paddingTop_none_mobile__onxwjut5 sprinkles_position_relative_mobile__onxwju9p sprinkles_width_full_mobile__onxwjudd NotchedBase_root__1ft8sxl0"
    >
      <div
        class="reset_block__1oah0224 sprinkles_width_full_mobile__onxwjudd sprinkles_height_full_mobile__onxwjubt"
      >
        <span
          class="reset_inlineText__1oah0223 sprinkles_display_block_mobile__onxwju7t Icon_makeResponsiveStyle_key_bp__1gy3ire4 reset_block__1oah0224 sprinkles_pointerEvents_none__onxwju3i sprinkles_position_absolute_mobile__onxwju9t withEnhancedInput_iconRoot__5jmdy8j withEnhancedInput_prefixIcon__5jmdy8k withEnhancedInput_iconSize_medium__5jmdy8n InputState_natural_default_colour__a2a1mv4"
        >
          <svg
            aria-hidden="true"
            class="sprinkles_display_block_mobile__onxwju7t sprinkles_width_full_mobile__onxwjudd sprinkles_height_full_mobile__onxwjubt"
            viewBox="0 0 512 512"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M183.253 353.707L280.96 256l-97.707-97.92 30.08-30.08 128 128-128 128-30.08-30.293z"
            />
          </svg>
        </span>
        <input
          autocomplete="off"
          class="reset_trimmedBlockElement__1oah0226 reset_appearance__1oah0221 reset_input__1oah0229 reset_trimmedBlockElement__1oah0226 reset_appearance__1oah0221 reset_input__1oah0229 sprinkles_borderRadius_md__onxwju4 sprinkles_width_full_mobile__onxwjudd sprinkles_position_relative_mobile__onxwju9p sprinkles_display_flex_mobile__onxwju81 sprinkles_backgroundColor_transparent__onxwju5h withEnhancedInput_input_itself_root__5jmdy80 withEnhancedInput_inputItselfSize_medium_root_any__5jmdy8b withEnhancedInput_inputItselfSize_medium_prefixed_any__5jmdy8d"
          max="2147483647"
          type="number"
          value=""
        />
      </div>
      <div
        class="reset_block__1oah0224 sprinkles_pointerEvents_none__onxwju3i sprinkles_position_absolute_mobile__onxwju9t sprinkles_display_flex_mobile__onxwju81 sprinkles_width_full_mobile__onxwjudd sprinkles_height_full_mobile__onxwjubt sprinkles_textAlign_left_mobile__onxwjua5 NotchedBase_borderVisualDefaults__1ft8sxl6 NotchedBase_borders_root_default__1ft8sxlb"
      >
        <div
          class="NotchedBase_borderRegionDefaults__1ft8sxl5 NotchedBase_borders_leading__1ft8sxlc InputState_natural_default_borderColour__a2a1mv5"
        />
        <div
          class="NotchedBase_borderRegionDefaults__1ft8sxl5 NotchedBase_borders_middle__1ft8sxld InputState_natural_default_borderColour__a2a1mv5"
        >
          <div
            class="reset_block__1oah0224 sprinkles_paddingLeft_2_mobile__onxwjuq1 sprinkles_paddingRight_2_mobile__onxwjur5 sprinkles_display_none_mobile__onxwju7p NotchedBase_labelStyle_base__1ft8sxl1 NotchedBase_labelStyle_medium__1ft8sxl3 NotchedBase_notchGapPlaceholder_base__1ft8sxl7 NotchedBase_notchGapPlaceholder_medium__1ft8sxl9"
          >
            placeholder something
          </div>
          <label
            class="reset_inlineText__1oah0223 sprinkles_pointerEvents_none__onxwju3i sprinkles_paddingBottom_none_mobile__onxwjupt sprinkles_paddingLeft_none_mobile__onxwjuqx sprinkles_paddingRight_none_mobile__onxwjus1 sprinkles_paddingTop_none_mobile__onxwjut5 sprinkles_marginBottom_none_mobile__onxwjuu9 sprinkles_marginLeft_none_mobile__onxwjuvd sprinkles_marginRight_none_mobile__onxwjuwl sprinkles_marginTop_none_mobile__onxwjuxt sprinkles_position_absolute_mobile__onxwju9t sprinkles_display_inline_mobile__onxwju89 NotchedBase_placeholder_default__1ft8sxlz NotchedBase_labelStyle_base__1ft8sxl1 NotchedBase_labelStyle_medium__1ft8sxl3 NotchedBase_placeholder_mutedLabelStyles__1ft8sxl10 NotchedBase_placeholderPlacement_medium_defaultPrefixed__1ft8sxl16"
          >
            placeholder something
          </label>
        </div>
        <div
          class="NotchedBase_borderRegionDefaults__1ft8sxl5 NotchedBase_borders_trailing__1ft8sxle InputState_natural_default_borderColour__a2a1mv5"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`<NumberInput /> > should match snapshot with suffix icon 1`] = `
<div
  class="theme_OD_Base__j49br80"
  data-od-component-provider=""
>
  <div
    class="reset_block__1oah0224 sprinkles_width_full_mobile__onxwjudd input-class"
  >
    <div
      class="reset_block__1oah0224 sprinkles_paddingBottom_none_mobile__onxwjupt sprinkles_paddingLeft_none_mobile__onxwjuqx sprinkles_paddingRight_none_mobile__onxwjus1 sprinkles_paddingTop_none_mobile__onxwjut5 sprinkles_position_relative_mobile__onxwju9p sprinkles_width_full_mobile__onxwjudd NotchedBase_root__1ft8sxl0"
    >
      <div
        class="reset_block__1oah0224 sprinkles_width_full_mobile__onxwjudd sprinkles_height_full_mobile__onxwjubt"
      >
        <span
          class="reset_inlineText__1oah0223 sprinkles_display_block_mobile__onxwju7t Icon_makeResponsiveStyle_key_bp__1gy3ire4 reset_block__1oah0224 sprinkles_pointerEvents_none__onxwju3i sprinkles_position_absolute_mobile__onxwju9t withEnhancedInput_iconRoot__5jmdy8j withEnhancedInput_suffixIcon__5jmdy8l withEnhancedInput_iconSize_medium__5jmdy8n InputState_natural_default_colour__a2a1mv4"
        >
          <svg
            aria-hidden="true"
            class="sprinkles_display_block_mobile__onxwju7t sprinkles_width_full_mobile__onxwjudd sprinkles_height_full_mobile__onxwjubt"
            viewBox="0 0 512 512"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M183.253 353.707L280.96 256l-97.707-97.92 30.08-30.08 128 128-128 128-30.08-30.293z"
            />
          </svg>
        </span>
        <input
          autocomplete="off"
          class="reset_trimmedBlockElement__1oah0226 reset_appearance__1oah0221 reset_input__1oah0229 reset_trimmedBlockElement__1oah0226 reset_appearance__1oah0221 reset_input__1oah0229 sprinkles_borderRadius_md__onxwju4 sprinkles_width_full_mobile__onxwjudd sprinkles_position_relative_mobile__onxwju9p sprinkles_display_flex_mobile__onxwju81 sprinkles_backgroundColor_transparent__onxwju5h withEnhancedInput_input_itself_root__5jmdy80 withEnhancedInput_inputItselfSize_medium_root_any__5jmdy8b undefined withEnhancedInput_inputItselfSize_medium_suffixed_any__5jmdy8e"
          max="2147483647"
          type="number"
          value=""
        />
      </div>
      <div
        class="reset_block__1oah0224 sprinkles_pointerEvents_none__onxwju3i sprinkles_position_absolute_mobile__onxwju9t sprinkles_display_flex_mobile__onxwju81 sprinkles_width_full_mobile__onxwjudd sprinkles_height_full_mobile__onxwjubt sprinkles_textAlign_left_mobile__onxwjua5 NotchedBase_borderVisualDefaults__1ft8sxl6 NotchedBase_borders_root_default__1ft8sxlb"
      >
        <div
          class="NotchedBase_borderRegionDefaults__1ft8sxl5 NotchedBase_borders_leading__1ft8sxlc InputState_natural_default_borderColour__a2a1mv5"
        />
        <div
          class="NotchedBase_borderRegionDefaults__1ft8sxl5 NotchedBase_borders_middle__1ft8sxld InputState_natural_default_borderColour__a2a1mv5"
        >
          <div
            class="reset_block__1oah0224 sprinkles_paddingLeft_2_mobile__onxwjuq1 sprinkles_paddingRight_2_mobile__onxwjur5 sprinkles_display_none_mobile__onxwju7p NotchedBase_labelStyle_base__1ft8sxl1 NotchedBase_labelStyle_medium__1ft8sxl3 NotchedBase_notchGapPlaceholder_base__1ft8sxl7 NotchedBase_notchGapPlaceholder_medium__1ft8sxl9"
          >
            placeholder something
          </div>
          <label
            class="reset_inlineText__1oah0223 sprinkles_pointerEvents_none__onxwju3i sprinkles_paddingBottom_none_mobile__onxwjupt sprinkles_paddingLeft_none_mobile__onxwjuqx sprinkles_paddingRight_none_mobile__onxwjus1 sprinkles_paddingTop_none_mobile__onxwjut5 sprinkles_marginBottom_none_mobile__onxwjuu9 sprinkles_marginLeft_none_mobile__onxwjuvd sprinkles_marginRight_none_mobile__onxwjuwl sprinkles_marginTop_none_mobile__onxwjuxt sprinkles_position_absolute_mobile__onxwju9t sprinkles_display_inline_mobile__onxwju89 NotchedBase_placeholder_default__1ft8sxlz NotchedBase_labelStyle_base__1ft8sxl1 NotchedBase_labelStyle_medium__1ft8sxl3 NotchedBase_placeholder_mutedLabelStyles__1ft8sxl10 NotchedBase_placeholderPlacement_medium_default__1ft8sxl15"
          >
            placeholder something
          </label>
        </div>
        <div
          class="NotchedBase_borderRegionDefaults__1ft8sxl5 NotchedBase_borders_trailing__1ft8sxle InputState_natural_default_borderColour__a2a1mv5"
        />
      </div>
    </div>
  </div>
</div>
`;
